--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Camper Leaderboard React</title>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css">
   <link rel="stylesheet" href="public/style.css">
+  <link rel="shortcut icon" type="image/png" href="https://res.cloudinary.com/anton-zdanov/image/upload/v1504940425/camper-leaderboard/React-JS.sh.png"/>
 </head>
 
 <body>
